--- a/index.html
+++ b/index.html
@@ -133,6 +133,17 @@
    border-radius: 20px;       /* roundness of the scroll thumb */
    border: 3px solid rgb(134, 134, 134);  /* creates padding around scroll thumb */
    }
+   #link{
+        background-color: #212529;
+        padding: 10px;
+        border: none;
+   }
+   #link:hover{
+        color: white;
+        text-shadow: none;
+        border:solid 2px;
+        /* width: 10px; */
+   }
 </style>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
